tests/tooling/fixtures/native/execution/positive/hex_literal_basic.objc3
module HexLiteralBasic;

let base = 0x10;

fn main() -> i32 {
  return base + 0x2;
}
