tests/tooling/fixtures/native/execution/negative/pure_extern_missing_fn_keyword.objc3
module PureExternMissingFnKeyword;

pure extern let value = 1;

fn main() -> i32 {
  return value;
}
